--- a/src/css/contacto.css
+++ b/src/css/contacto.css
@@ -24,6 +24,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
 }
 
 .logo {
