--- a/src/css/index.css
+++ b/src/css/index.css
@@ -163,13 +163,13 @@ img {
 }
 
 .blue_primary_text {
-    color: #09BCED;
+    color: #00AEDE;
 }
 
 .yellow_primary_text {
-    color: #EDDA09;
+    color: #DE8E00;
 }
 
 .red_primary_text {
-    color: #ec3815;
+    color: #DE4600;
 }
