--- a/src/css/contacto.css
+++ b/src/css/contacto.css
@@ -73,7 +73,7 @@ body {
 }
 
 .navegacion a:hover, .navegacion a.active {
-    color: #00b1db;
+    color: #00aede;
 }
 
 .botones-encabezado {
@@ -82,7 +82,7 @@ body {
 }
 
 .boton-comprar {
-    background-color: #00b1db;
+    background-color: #00aede;
     color: white;
     padding: 10px 25px;
     border-radius: 5px;
@@ -170,7 +170,7 @@ body {
 .grupo-formulario input:focus,
 .grupo-formulario textarea:focus {
     outline: none;
-    border-color: #00b1db;
+    border-color: #00aede;
 }
 
 .grupo-formulario textarea {
@@ -192,7 +192,7 @@ body {
 }
 
 .boton-enviar:hover {
-    background-color: #e88a29;
+    background-color: #de8e00;
 }
 
 .seccion-info {
@@ -209,7 +209,7 @@ body {
 }
 
 .tarjeta-info h2 {
-    color: #e88a29;
+    color: #de8e00;
     font-size: 22px;
     margin-bottom: 15px;
 }
@@ -251,7 +251,7 @@ body {
 }
 
 .icono-social:hover {
-    background-color: #00b1db;
+    background-color: #DE4600;
     color: white;
 }
 
@@ -300,7 +300,7 @@ body {
 }
 
 .seccion-pie ul li a:hover {
-    color: #00b1db;
+    color: #00AEDE;
 }
 
 .pie-inferior {
